# trucking-pay-wizard

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml  requirements-wsl.txt  requirements.txt  run_gui.py  test_azure.py
.cursor/rules/: pipeline-architecture.mdc  project-context.mdc  python-standards.mdc  testing-pipeline.mdc  testing.mdc  versioning.mdc
docs/: USER_INSTALL.md
packaging/: README.md  TruckingPayWizard.spec  build.ps1  installer.iss
project/: TODO.txt  architecture.md  beta_plan.md  developer_guidelines.md  setup.md  vision.md
scripts/: gen_setup_code.py  generate_fixtures.py  wsl-setup.sh
src/: config.py  credentials.py  logging_config.py  setup_code.py  updater.py
src/cache/: __init__.py  store.py
src/extract/: __init__.py  base.py  exceptions.py  extractor.py  models.py  pay_verifier.py
src/gui/: _errors.py  _report_issue.py  _widgets.py  app.py
src/ingest/: __init__.py  exceptions.py  loader.py  models.py
src/ocr/: __init__.py  analyzer.py  client.py  exceptions.py  models.py
src/report/: __init__.py  _date_parsing.py  excel_exporter.py  exceptions.py  pdf_builder.py
tests/: conftest.py
tests/fixtures/: bill_of_lading_no_payment.json  carrier_tms_load_ocr.json  central_dispatch_settlement.json  central_dispatch_settlement_ocr.json  cod_settlement_ocr.json  generate_fixtures.py  insurance_certificate.json  multi_date_formats_ocr.json  multi_load_duplicate_date.json  multi_load_duplicate_pay.json  multi_load_settlement.json  multi_vehicle_central_dispatch.json  noisy_boilerplate_ocr.json  pay_summary_ocr.json  pdf_builder.py  revision_history_ocr.json  settlement_ocr.json  single_load_settlement.json  sparse_tms_print_ocr.json  summary_with_detail_tables.json  v2_dispatch_load.json  (+5 more)
(+52 files in other folders)
