# Tool configuration only — no [project] table.
# Packaging is handled by PyInstaller (see build scripts).
# Runtime dependencies are in requirements.txt.

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "live_api: tests that make real API calls (Azure, Anthropic) — run with: pytest tests/live/ --no-cov -v",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/gui/*",       # exercised via manual smoke testing
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.mutmut]
paths_to_mutate = "src/extract/,src/cache/,src/report/excel_exporter.py"
runner = "pytest -x -q"
